syntax = "proto3";
package uexecutor.v1.old;

import "gogoproto/gogo.proto";
import "amino/amino.proto";

option go_package = "github.com/pushchain/push-chain-node/x/uexecutor/oldtypes";

import "uexecutor/v1/types.proto";

enum InboundTxType {
  UNSPECIFIED_TX = 0;
  GAS = 1; // fee abstraction
  FUNDS = 2; // synthetic
  FUNDS_AND_PAYLOAD = 3; // synthetic + payload exec
  GAS_AND_PAYLOAD = 4; // fee abstraction + payload exec
}

message Inbound {
  option (amino.name) = "uexecutor/inbound";
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  string source_chain = 1;  // origin chain caip2 id (e.g. eip155:11155111)
  string tx_hash        = 2;  // unique tx hash / identifier from source chain
  string sender = 3; // sender address on source chain
  string recipient    = 4;  // recipient address on destination chain
  string amount = 5; // synthetic token amount bridged in
  string asset_addr        = 6;  // address of erc20 token address on source chain
  string log_index = 7; // log index that originated the cross chain tx
  InboundTxType tx_type = 8; // inbound tx type
  UniversalPayload universal_payload = 9; // payload is the universal payload to be executed
  string verification_data = 10; // verification_data is the bytes passed as verifier data for the given payload.
}

message OutboundTx {
  option (amino.name) = "uexecutor/outbound_tx";
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  string destination_chain = 1;    // chain where this outbound is sent
  string tx_hash           = 2;    // outbound tx hash on destination chain
  string recipient         = 3;    // recipient on destination chain
  string amount            = 4;    // token amount or payload
  string asset_addr        = 5;    // token contract if applicable
}

message UniversalTx {
  option (amino.name) = "uexecutor/universal_tx";
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;
  
  Inbound inbound_tx = 1;    // Full inbound tx data
  repeated PCTx pc_tx = 2;               // Execution details on Push Chain
  OutboundTx outbound_tx = 3;    // Outbound tx triggered by this tx
  UniversalTxStatus universal_status = 4;       // Current status
}
